# dameng-mcp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  diagnose.py  mcp-config.json  pyproject.toml  requirements.txt
dm_mcp/: __init__.py  __main__.py
