[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-mcp"
version = "1.0.0"
description = "达梦数据库 MCP 服务器 - 基于 FastMCP 的安全数据库查询工具"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mcp", "database", "dameng", "sql", "query"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.2.4",
    "mcp>=1.23.0",
    "dmPython>=2.5.32",
]

[project.urls]
Homepage = "https://github.com/yourusername/dm-mcp"
Repository = "https://github.com/yourusername/dm-mcp"
Issues = "https://github.com/yourusername/dm-mcp/issues"
Changelog = "https://github.com/yourusername/dm-mcp/blob/main/CHANGELOG.md"

[project.scripts]
dm-mcp = "dm_mcp.__main__:main"

[tool.setuptools]
packages = ["dm_mcp"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
dm_mcp = ["*.md", "*.txt"]
